--- a/css/main.css
+++ b/css/main.css
@@ -1826,7 +1826,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #c916ff;
+  background: #d1ffbe;
 }
 .links-of-blogroll {
   font-size: 13px;
