--- a/css/main.css
+++ b/css/main.css
@@ -1826,7 +1826,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #fa5449;
+  background: #6f54d9;
 }
 .links-of-blogroll {
   font-size: 13px;
